// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._1kp3quxz,html._1kp3quxz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_10edonf0 _1kr534d18 _1kr534d1b">
+        <div class="n3ejd10 _1kp3qux7i _1kp3qux6e _1kp3qux9q _1kp3qux8m _1kp3qux5e _1kr534d18 _1kr534d1b _1kp3qux32 _1kp3qux35">
+          <span class="n3ejd10 _1kp3qux4y _1kr534d0 _1kr534d1 _1kr534d21 uo8yjc4 _1kr534dd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .n3ejd10 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .n3ejd10 {
  outline: none;
}
.n3ejd11 {
  display: block;
}
.n3ejd12 {
  line-height: 1;
}
.n3ejd13 {
  list-style: none;
}
.n3ejd14 {
  quotes: none;
}
.n3ejd14:after,
.n3ejd14:before {
  content: "";
}
.n3ejd15 {
  border-collapse: collapse;
  border-spacing: 0;
}
.n3ejd16 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
.n3ejd17 {
  background-color: transparent;
}
.n3ejd19 {
  color: inherit;
}
.n3ejd1a:disabled {
  opacity: 1;
}
.n3ejd1a::-ms-expand {
  display: none;
}
.n3ejd1c[type="number"] {
  -moz-appearance: textfield;
}
.n3ejd1c[type="number"]::-webkit-inner-spin-button,
.n3ejd1c[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.n3ejd1c::-ms-clear {
  display: none;
}
.n3ejd1c::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.n3ejd1f {
  color: inherit;
  text-decoration: none;
}
._1kp3qux0 {
  overflow: hidden;
}
._1kp3qux1 {
  overflow: scroll;
}
._1kp3qux2 {
  overflow: visible;
}
._1kp3qux3 {
  overflow: auto;
}
._1kp3qux4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
._1kp3qux5 {
  outline: none;
}
._1kp3qux6 {
  opacity: 0;
}
._1kp3qux7 {
  z-index: 0;
}
._1kp3qux8 {
  z-index: 1;
}
._1kp3qux9 {
  z-index: 2;
}
._1kp3quxa {
  z-index: 90;
}
._1kp3quxb {
  z-index: 100;
}
._1kp3quxc {
  z-index: 200;
}
._1kp3quxd {
  z-index: 290;
}
._1kp3quxe {
  z-index: 300;
}
._1kp3quxf {
  z-index: 400;
}
._1kp3quxg {
  cursor: default;
}
._1kp3quxh {
  cursor: pointer;
}
._1kp3quxi {
  pointer-events: none;
}
._1kp3quxj {
  top: 0;
}
._1kp3quxk {
  bottom: 0;
}
._1kp3quxl {
  left: 0;
}
._1kp3quxm {
  right: 0;
}
._1kp3quxn {
  height: 100%;
}
._1kp3quxo {
  height: var(--fz4haf9);
}
._1kp3quxp {
  width: 100%;
}
._1kp3quxq {
  width: var(--fz4haf9);
}
._1kp3quxr {
  min-width: 0;
}
._1kp3quxs {
  max-width: var(--fz4haf11);
}
._1kp3quxt {
  max-width: var(--fz4haf12);
}
._1kp3quxu {
  max-width: var(--fz4haf13);
}
._1kp3quxv {
  max-width: var(--fz4haf14);
}
._1kp3quxw {
  transition: var(--fz4haf5i);
}
._1kp3quxx {
  transition: var(--fz4haf5j);
}
._1kp3quxy:active {
  transform: var(--fz4haf5k);
}
html._1kp3quxz ._1kp3qux11,
html:not(._1kp3quxz) ._1kp3qux10 {
  background: var(--fz4haf1t);
}
html._1kp3quxz ._1kp3qux13,
html:not(._1kp3quxz) ._1kp3qux12 {
  background: var(--fz4haf1u);
}
html._1kp3quxz ._1kp3qux15,
html:not(._1kp3quxz) ._1kp3qux14 {
  background: var(--fz4haf1v);
}
html._1kp3quxz ._1kp3qux17,
html:not(._1kp3quxz) ._1kp3qux16 {
  background: var(--fz4haf1w);
}
html._1kp3quxz ._1kp3qux19,
html:not(._1kp3quxz) ._1kp3qux18 {
  background: var(--fz4haf1x);
}
html._1kp3quxz ._1kp3qux1b,
html:not(._1kp3quxz) ._1kp3qux1a {
  background: var(--fz4haf1y);
}
html._1kp3quxz ._1kp3qux1d,
html:not(._1kp3quxz) ._1kp3qux1c {
  background: var(--fz4haf1z);
}
html._1kp3quxz ._1kp3qux1f,
html:not(._1kp3quxz) ._1kp3qux1e {
  background: var(--fz4haf20);
}
html._1kp3quxz ._1kp3qux1h,
html:not(._1kp3quxz) ._1kp3qux1g {
  background: var(--fz4haf21);
}
html._1kp3quxz ._1kp3qux1j,
html:not(._1kp3quxz) ._1kp3qux1i {
  background: var(--fz4haf22);
}
html._1kp3quxz ._1kp3qux1l,
html:not(._1kp3quxz) ._1kp3qux1k {
  background: var(--fz4haf23);
}
html._1kp3quxz ._1kp3qux1n,
html:not(._1kp3quxz) ._1kp3qux1m {
  background: var(--fz4haf24);
}
html._1kp3quxz ._1kp3qux1p,
html:not(._1kp3quxz) ._1kp3qux1o {
  background: var(--fz4haf25);
}
html._1kp3quxz ._1kp3qux1r,
html:not(._1kp3quxz) ._1kp3qux1q {
  background: var(--fz4haf26);
}
html._1kp3quxz ._1kp3qux1t,
html:not(._1kp3quxz) ._1kp3qux1s {
  background: var(--fz4haf27);
}
html._1kp3quxz ._1kp3qux1v,
html:not(._1kp3quxz) ._1kp3qux1u {
  background: var(--fz4haf28);
}
html._1kp3quxz ._1kp3qux1x,
html:not(._1kp3quxz) ._1kp3qux1w {
  background: var(--fz4haf29);
}
html._1kp3quxz ._1kp3qux1z,
html:not(._1kp3quxz) ._1kp3qux1y {
  background: var(--fz4haf2a);
}
html._1kp3quxz ._1kp3qux21,
html:not(._1kp3quxz) ._1kp3qux20 {
  background: var(--fz4haf2b);
}
html._1kp3quxz ._1kp3qux23,
html:not(._1kp3quxz) ._1kp3qux22 {
  background: var(--fz4haf2c);
}
html._1kp3quxz ._1kp3qux25,
html:not(._1kp3quxz) ._1kp3qux24 {
  background: var(--fz4haf2d);
}
html._1kp3quxz ._1kp3qux27,
html:not(._1kp3quxz) ._1kp3qux26 {
  background: var(--fz4haf2e);
}
html._1kp3quxz ._1kp3qux29,
html:not(._1kp3quxz) ._1kp3qux28 {
  background: var(--fz4haf2f);
}
html._1kp3quxz ._1kp3qux2b,
html:not(._1kp3quxz) ._1kp3qux2a {
  background: var(--fz4haf2g);
}
html._1kp3quxz ._1kp3qux2d,
html:not(._1kp3quxz) ._1kp3qux2c {
  background: var(--fz4haf2h);
}
html._1kp3quxz ._1kp3qux2f,
html:not(._1kp3quxz) ._1kp3qux2e {
  background: var(--fz4haf2i);
}
html._1kp3quxz ._1kp3qux2h,
html:not(._1kp3quxz) ._1kp3qux2g {
  background: var(--fz4haf2j);
}
html._1kp3quxz ._1kp3qux2j,
html:not(._1kp3quxz) ._1kp3qux2i {
  background: var(--fz4haf2k);
}
html._1kp3quxz ._1kp3qux2l,
html:not(._1kp3quxz) ._1kp3qux2k {
  background: var(--fz4haf2l);
}
html._1kp3quxz ._1kp3qux2n,
html:not(._1kp3quxz) ._1kp3qux2m {
  background: var(--fz4haf2m);
}
html._1kp3quxz ._1kp3qux2p,
html:not(._1kp3quxz) ._1kp3qux2o {
  background: var(--fz4haf2n);
}
html._1kp3quxz ._1kp3qux2r,
html:not(._1kp3quxz) ._1kp3qux2q {
  background: var(--fz4haf2o);
}
html._1kp3quxz ._1kp3qux2t,
html:not(._1kp3quxz) ._1kp3qux2s {
  background: var(--fz4haf2p);
}
html._1kp3quxz ._1kp3qux2v,
html:not(._1kp3quxz) ._1kp3qux2u {
  background: var(--fz4haf2q);
}
html._1kp3quxz ._1kp3qux2x,
html:not(._1kp3quxz) ._1kp3qux2w {
  background: var(--fz4haf2r);
}
html._1kp3quxz ._1kp3qux2z,
html:not(._1kp3quxz) ._1kp3qux2y {
  background: var(--fz4haf2s);
}
html._1kp3quxz ._1kp3qux31,
html:not(._1kp3quxz) ._1kp3qux30 {
  background: var(--fz4haf2t);
}
html._1kp3quxz ._1kp3qux33,
html:not(._1kp3quxz) ._1kp3qux32 {
  background: var(--fz4haf2u);
}
html._1kp3quxz ._1kp3qux35,
html:not(._1kp3quxz) ._1kp3qux34 {
  background: var(--fz4haf2v);
}
html._1kp3quxz ._1kp3qux37,
html:not(._1kp3quxz) ._1kp3qux36 {
  box-shadow: var(--fz4haf5l);
}
html._1kp3quxz ._1kp3qux39,
html:not(._1kp3quxz) ._1kp3qux38 {
  box-shadow: var(--fz4haf5m);
}
html._1kp3quxz ._1kp3qux3b,
html:not(._1kp3quxz) ._1kp3qux3a {
  box-shadow: var(--fz4haf5n);
}
html._1kp3quxz ._1kp3qux3d,
html:not(._1kp3quxz) ._1kp3qux3c {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4haff);
}
html._1kp3quxz ._1kp3qux3f,
html:not(._1kp3quxz) ._1kp3qux3e {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafg);
}
html._1kp3quxz ._1kp3qux3h,
html:not(._1kp3quxz) ._1kp3qux3g {
  box-shadow: inset 0 0 0 var(--fz4hafz) var(--fz4haff);
}
html._1kp3quxz ._1kp3qux3j,
html:not(._1kp3quxz) ._1kp3qux3i {
  box-shadow: inset 0 0 0 var(--fz4hafz) var(--fz4hafg);
}
html._1kp3quxz ._1kp3qux3l,
html:not(._1kp3quxz) ._1kp3qux3k {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafh);
}
html._1kp3quxz ._1kp3qux3n,
html:not(._1kp3quxz) ._1kp3qux3m {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafi);
}
html._1kp3quxz ._1kp3qux3p,
html:not(._1kp3quxz) ._1kp3qux3o {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafj);
}
html._1kp3quxz ._1kp3qux3r,
html:not(._1kp3quxz) ._1kp3qux3q {
  box-shadow: inset 0 0 0 var(--fz4hafz) var(--fz4hafj);
}
html._1kp3quxz ._1kp3qux3t,
html:not(._1kp3quxz) ._1kp3qux3s {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafk);
}
html._1kp3quxz ._1kp3qux3v,
html:not(._1kp3quxz) ._1kp3qux3u {
  box-shadow: inset 0 0 0 var(--fz4hafz) var(--fz4hafk);
}
html._1kp3quxz ._1kp3qux3x,
html:not(._1kp3quxz) ._1kp3qux3w {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafl);
}
html._1kp3quxz ._1kp3qux3z,
html:not(._1kp3quxz) ._1kp3qux3y {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafn);
}
html._1kp3quxz ._1kp3qux41,
html:not(._1kp3quxz) ._1kp3qux40 {
  box-shadow: inset 0 0 0 var(--fz4hafz) var(--fz4hafn);
}
html._1kp3quxz ._1kp3qux43,
html:not(._1kp3quxz) ._1kp3qux42 {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafo);
}
html._1kp3quxz ._1kp3qux45,
html:not(._1kp3quxz) ._1kp3qux44 {
  box-shadow: inset 0 0 0 var(--fz4hafz) var(--fz4hafo);
}
html._1kp3quxz ._1kp3qux47,
html:not(._1kp3quxz) ._1kp3qux46 {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafp);
}
html._1kp3quxz ._1kp3qux49,
html:not(._1kp3quxz) ._1kp3qux48 {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafq);
}
html._1kp3quxz ._1kp3qux4b,
html:not(._1kp3quxz) ._1kp3qux4a {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafr);
}
html._1kp3quxz ._1kp3qux4d,
html:not(._1kp3quxz) ._1kp3qux4c {
  box-shadow: inset 0 0 0 var(--fz4hafz) var(--fz4hafr);
}
html._1kp3quxz ._1kp3qux4f,
html:not(._1kp3quxz) ._1kp3qux4e {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafs);
}
html._1kp3quxz ._1kp3qux4h,
html:not(._1kp3quxz) ._1kp3qux4g {
  box-shadow: inset 0 0 0 var(--fz4hafz) var(--fz4hafs);
}
html._1kp3quxz ._1kp3qux4j,
html:not(._1kp3quxz) ._1kp3qux4i {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4haft);
}
html._1kp3quxz ._1kp3qux4l,
html:not(._1kp3quxz) ._1kp3qux4k {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafu);
}
html._1kp3quxz ._1kp3qux4n,
html:not(._1kp3quxz) ._1kp3qux4m {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafv);
}
html._1kp3quxz ._1kp3qux4p,
html:not(._1kp3quxz) ._1kp3qux4o {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafw);
}
html._1kp3quxz ._1kp3qux4r,
html:not(._1kp3quxz) ._1kp3qux4q {
  box-shadow: inset 0 0 0 var(--fz4hafy) var(--fz4hafx);
}
html._1kp3quxz ._1kp3qux4t,
html:not(._1kp3quxz) ._1kp3qux4s {
  box-shadow: 0 0 0 var(--fz4haf10) var(--fz4hafm);
}
._1kp3qux4u {
  display: none;
}
._1kp3qux4y {
  display: block;
}
._1kp3qux52 {
  display: inline;
}
._1kp3qux56 {
  display: inline-block;
}
._1kp3qux5a {
  display: flex;
}
._1kp3qux5e {
  position: relative;
}
._1kp3qux5i {
  position: absolute;
}
._1kp3qux5m {
  position: fixed;
}
._1kp3qux5q {
  border-radius: 0;
}
._1kp3qux5u {
  border-radius: 9999px;
}
._1kp3qux5y {
  border-radius: var(--fz4hafb);
}
._1kp3qux62 {
  border-radius: var(--fz4hafc);
}
._1kp3qux66 {
  border-radius: var(--fz4hafd);
}
._1kp3qux6a {
  border-radius: var(--fz4hafe);
}
._1kp3qux6e {
  padding-top: var(--fz4haf0);
}
._1kp3qux6i {
  padding-top: var(--fz4haf1);
}
._1kp3qux6m {
  padding-top: var(--fz4haf2);
}
._1kp3qux6q {
  padding-top: var(--fz4haf3);
}
._1kp3qux6u {
  padding-top: var(--fz4haf4);
}
._1kp3qux6y {
  padding-top: var(--fz4haf5);
}
._1kp3qux72 {
  padding-top: var(--fz4haf6);
}
._1kp3qux76 {
  padding-top: var(--fz4haf7);
}
._1kp3qux7a {
  padding-top: var(--fz4haf8);
}
._1kp3qux7e {
  padding-top: 0;
}
._1kp3qux7i {
  padding-bottom: var(--fz4haf0);
}
._1kp3qux7m {
  padding-bottom: var(--fz4haf1);
}
._1kp3qux7q {
  padding-bottom: var(--fz4haf2);
}
._1kp3qux7u {
  padding-bottom: var(--fz4haf3);
}
._1kp3qux7y {
  padding-bottom: var(--fz4haf4);
}
._1kp3qux82 {
  padding-bottom: var(--fz4haf5);
}
._1kp3qux86 {
  padding-bottom: var(--fz4haf6);
}
._1kp3qux8a {
  padding-bottom: var(--fz4haf7);
}
._1kp3qux8e {
  padding-bottom: var(--fz4haf8);
}
._1kp3qux8i {
  padding-bottom: 0;
}
._1kp3qux8m {
  padding-right: var(--fz4haf0);
}
._1kp3qux8q {
  padding-right: var(--fz4haf1);
}
._1kp3qux8u {
  padding-right: var(--fz4haf2);
}
._1kp3qux8y {
  padding-right: var(--fz4haf3);
}
._1kp3qux92 {
  padding-right: var(--fz4haf4);
}
._1kp3qux96 {
  padding-right: var(--fz4haf5);
}
._1kp3qux9a {
  padding-right: var(--fz4haf6);
}
._1kp3qux9e {
  padding-right: var(--fz4haf7);
}
._1kp3qux9i {
  padding-right: var(--fz4haf8);
}
._1kp3qux9m {
  padding-right: 0;
}
._1kp3qux9q {
  padding-left: var(--fz4haf0);
}
._1kp3qux9u {
  padding-left: var(--fz4haf1);
}
._1kp3qux9y {
  padding-left: var(--fz4haf2);
}
._1kp3quxa2 {
  padding-left: var(--fz4haf3);
}
._1kp3quxa6 {
  padding-left: var(--fz4haf4);
}
._1kp3quxaa {
  padding-left: var(--fz4haf5);
}
._1kp3quxae {
  padding-left: var(--fz4haf6);
}
._1kp3quxai {
  padding-left: var(--fz4haf7);
}
._1kp3quxam {
  padding-left: var(--fz4haf8);
}
._1kp3quxaq {
  padding-left: 0;
}
._1kp3quxau {
  margin-top: var(--fz4haf0);
}
._1kp3quxay {
  margin-top: var(--fz4haf1);
}
._1kp3quxb2 {
  margin-top: var(--fz4haf2);
}
._1kp3quxb6 {
  margin-top: var(--fz4haf3);
}
._1kp3quxba {
  margin-top: var(--fz4haf4);
}
._1kp3quxbe {
  margin-top: var(--fz4haf5);
}
._1kp3quxbi {
  margin-top: var(--fz4haf6);
}
._1kp3quxbm {
  margin-top: var(--fz4haf7);
}
._1kp3quxbq {
  margin-top: var(--fz4haf8);
}
._1kp3quxbu {
  margin-top: 0;
}
._1kp3quxby {
  margin-bottom: var(--fz4haf0);
}
._1kp3quxc2 {
  margin-bottom: var(--fz4haf1);
}
._1kp3quxc6 {
  margin-bottom: var(--fz4haf2);
}
._1kp3quxca {
  margin-bottom: var(--fz4haf3);
}
._1kp3quxce {
  margin-bottom: var(--fz4haf4);
}
._1kp3quxci {
  margin-bottom: var(--fz4haf5);
}
._1kp3quxcm {
  margin-bottom: var(--fz4haf6);
}
._1kp3quxcq {
  margin-bottom: var(--fz4haf7);
}
._1kp3quxcu {
  margin-bottom: var(--fz4haf8);
}
._1kp3quxcy {
  margin-bottom: 0;
}
._1kp3quxd2 {
  margin-right: var(--fz4haf0);
}
._1kp3quxd6 {
  margin-right: var(--fz4haf1);
}
._1kp3quxda {
  margin-right: var(--fz4haf2);
}
._1kp3quxde {
  margin-right: var(--fz4haf3);
}
._1kp3quxdi {
  margin-right: var(--fz4haf4);
}
._1kp3quxdm {
  margin-right: var(--fz4haf5);
}
._1kp3quxdq {
  margin-right: var(--fz4haf6);
}
._1kp3quxdu {
  margin-right: var(--fz4haf7);
}
._1kp3quxdy {
  margin-right: var(--fz4haf8);
}
._1kp3quxe2 {
  margin-right: 0;
}
._1kp3quxe6 {
  margin-left: var(--fz4haf0);
}
._1kp3quxea {
  margin-left: var(--fz4haf1);
}
._1kp3quxee {
  margin-left: var(--fz4haf2);
}
._1kp3quxei {
  margin-left: var(--fz4haf3);
}
._1kp3quxem {
  margin-left: var(--fz4haf4);
}
._1kp3quxeq {
  margin-left: var(--fz4haf5);
}
._1kp3quxeu {
  margin-left: var(--fz4haf6);
}
._1kp3quxey {
  margin-left: var(--fz4haf7);
}
._1kp3quxf2 {
  margin-left: var(--fz4haf8);
}
._1kp3quxf6 {
  margin-left: 0;
}
._1kp3quxfa {
  align-items: flex-start;
}
._1kp3quxfe {
  align-items: center;
}
._1kp3quxfi {
  align-items: flex-end;
}
._1kp3quxfm {
  justify-content: flex-start;
}
._1kp3quxfq {
  justify-content: center;
}
._1kp3quxfu {
  justify-content: flex-end;
}
._1kp3quxfy {
  justify-content: space-between;
}
._1kp3quxg2 {
  flex-direction: row;
}
._1kp3quxg6 {
  flex-direction: row-reverse;
}
._1kp3quxga {
  flex-direction: column;
}
._1kp3quxge {
  flex-direction: column-reverse;
}
._1kp3quxgi {
  flex-wrap: wrap;
}
._1kp3quxgm {
  flex-wrap: nowrap;
}
._1kp3quxgq {
  flex-shrink: 0;
}
._1kp3quxgu {
  flex-grow: 0;
}
._1kp3quxgy {
  flex-grow: 1;
}
._1kp3quxh2 {
  text-align: left;
}
._1kp3quxh6 {
  text-align: center;
}
._1kp3quxha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1kp3qux4v {
    display: none;
  }
  ._1kp3qux4z {
    display: block;
  }
  ._1kp3qux53 {
    display: inline;
  }
  ._1kp3qux57 {
    display: inline-block;
  }
  ._1kp3qux5b {
    display: flex;
  }
  ._1kp3qux5f {
    position: relative;
  }
  ._1kp3qux5j {
    position: absolute;
  }
  ._1kp3qux5n {
    position: fixed;
  }
  ._1kp3qux5r {
    border-radius: 0;
  }
  ._1kp3qux5v {
    border-radius: 9999px;
  }
  ._1kp3qux5z {
    border-radius: var(--fz4hafb);
  }
  ._1kp3qux63 {
    border-radius: var(--fz4hafc);
  }
  ._1kp3qux67 {
    border-radius: var(--fz4hafd);
  }
  ._1kp3qux6b {
    border-radius: var(--fz4hafe);
  }
  ._1kp3qux6f {
    padding-top: var(--fz4haf0);
  }
  ._1kp3qux6j {
    padding-top: var(--fz4haf1);
  }
  ._1kp3qux6n {
    padding-top: var(--fz4haf2);
  }
  ._1kp3qux6r {
    padding-top: var(--fz4haf3);
  }
  ._1kp3qux6v {
    padding-top: var(--fz4haf4);
  }
  ._1kp3qux6z {
    padding-top: var(--fz4haf5);
  }
  ._1kp3qux73 {
    padding-top: var(--fz4haf6);
  }
  ._1kp3qux77 {
    padding-top: var(--fz4haf7);
  }
  ._1kp3qux7b {
    padding-top: var(--fz4haf8);
  }
  ._1kp3qux7f {
    padding-top: 0;
  }
  ._1kp3qux7j {
    padding-bottom: var(--fz4haf0);
  }
  ._1kp3qux7n {
    padding-bottom: var(--fz4haf1);
  }
  ._1kp3qux7r {
    padding-bottom: var(--fz4haf2);
  }
  ._1kp3qux7v {
    padding-bottom: var(--fz4haf3);
  }
  ._1kp3qux7z {
    padding-bottom: var(--fz4haf4);
  }
  ._1kp3qux83 {
    padding-bottom: var(--fz4haf5);
  }
  ._1kp3qux87 {
    padding-bottom: var(--fz4haf6);
  }
  ._1kp3qux8b {
    padding-bottom: var(--fz4haf7);
  }
  ._1kp3qux8f {
    padding-bottom: var(--fz4haf8);
  }
  ._1kp3qux8j {
    padding-bottom: 0;
  }
  ._1kp3qux8n {
    padding-right: var(--fz4haf0);
  }
  ._1kp3qux8r {
    padding-right: var(--fz4haf1);
  }
  ._1kp3qux8v {
    padding-right: var(--fz4haf2);
  }
  ._1kp3qux8z {
    padding-right: var(--fz4haf3);
  }
  ._1kp3qux93 {
    padding-right: var(--fz4haf4);
  }
  ._1kp3qux97 {
    padding-right: var(--fz4haf5);
  }
  ._1kp3qux9b {
    padding-right: var(--fz4haf6);
  }
  ._1kp3qux9f {
    padding-right: var(--fz4haf7);
  }
  ._1kp3qux9j {
    padding-right: var(--fz4haf8);
  }
  ._1kp3qux9n {
    padding-right: 0;
  }
  ._1kp3qux9r {
    padding-left: var(--fz4haf0);
  }
  ._1kp3qux9v {
    padding-left: var(--fz4haf1);
  }
  ._1kp3qux9z {
    padding-left: var(--fz4haf2);
  }
  ._1kp3quxa3 {
    padding-left: var(--fz4haf3);
  }
  ._1kp3quxa7 {
    padding-left: var(--fz4haf4);
  }
  ._1kp3quxab {
    padding-left: var(--fz4haf5);
  }
  ._1kp3quxaf {
    padding-left: var(--fz4haf6);
  }
  ._1kp3quxaj {
    padding-left: var(--fz4haf7);
  }
  ._1kp3quxan {
    padding-left: var(--fz4haf8);
  }
  ._1kp3quxar {
    padding-left: 0;
  }
  ._1kp3quxav {
    margin-top: var(--fz4haf0);
  }
  ._1kp3quxaz {
    margin-top: var(--fz4haf1);
  }
  ._1kp3quxb3 {
    margin-top: var(--fz4haf2);
  }
  ._1kp3quxb7 {
    margin-top: var(--fz4haf3);
  }
  ._1kp3quxbb {
    margin-top: var(--fz4haf4);
  }
  ._1kp3quxbf {
    margin-top: var(--fz4haf5);
  }
  ._1kp3quxbj {
    margin-top: var(--fz4haf6);
  }
  ._1kp3quxbn {
    margin-top: var(--fz4haf7);
  }
  ._1kp3quxbr {
    margin-top: var(--fz4haf8);
  }
  ._1kp3quxbv {
    margin-top: 0;
  }
  ._1kp3quxbz {
    margin-bottom: var(--fz4haf0);
  }
  ._1kp3quxc3 {
    margin-bottom: var(--fz4haf1);
  }
  ._1kp3quxc7 {
    margin-bottom: var(--fz4haf2);
  }
  ._1kp3quxcb {
    margin-bottom: var(--fz4haf3);
  }
  ._1kp3quxcf {
    margin-bottom: var(--fz4haf4);
  }
  ._1kp3quxcj {
    margin-bottom: var(--fz4haf5);
  }
  ._1kp3quxcn {
    margin-bottom: var(--fz4haf6);
  }
  ._1kp3quxcr {
    margin-bottom: var(--fz4haf7);
  }
  ._1kp3quxcv {
    margin-bottom: var(--fz4haf8);
  }
  ._1kp3quxcz {
    margin-bottom: 0;
  }
  ._1kp3quxd3 {
    margin-right: var(--fz4haf0);
  }
  ._1kp3quxd7 {
    margin-right: var(--fz4haf1);
  }
  ._1kp3quxdb {
    margin-right: var(--fz4haf2);
  }
  ._1kp3quxdf {
    margin-right: var(--fz4haf3);
  }
  ._1kp3quxdj {
    margin-right: var(--fz4haf4);
  }
  ._1kp3quxdn {
    margin-right: var(--fz4haf5);
  }
  ._1kp3quxdr {
    margin-right: var(--fz4haf6);
  }
  ._1kp3quxdv {
    margin-right: var(--fz4haf7);
  }
  ._1kp3quxdz {
    margin-right: var(--fz4haf8);
  }
  ._1kp3quxe3 {
    margin-right: 0;
  }
  ._1kp3quxe7 {
    margin-left: var(--fz4haf0);
  }
  ._1kp3quxeb {
    margin-left: var(--fz4haf1);
  }
  ._1kp3quxef {
    margin-left: var(--fz4haf2);
  }
  ._1kp3quxej {
    margin-left: var(--fz4haf3);
  }
  ._1kp3quxen {
    margin-left: var(--fz4haf4);
  }
  ._1kp3quxer {
    margin-left: var(--fz4haf5);
  }
  ._1kp3quxev {
    margin-left: var(--fz4haf6);
  }
  ._1kp3quxez {
    margin-left: var(--fz4haf7);
  }
  ._1kp3quxf3 {
    margin-left: var(--fz4haf8);
  }
  ._1kp3quxf7 {
    margin-left: 0;
  }
  ._1kp3quxfb {
    align-items: flex-start;
  }
  ._1kp3quxff {
    align-items: center;
  }
  ._1kp3quxfj {
    align-items: flex-end;
  }
  ._1kp3quxfn {
    justify-content: flex-start;
  }
  ._1kp3quxfr {
    justify-content: center;
  }
  ._1kp3quxfv {
    justify-content: flex-end;
  }
  ._1kp3quxfz {
    justify-content: space-between;
  }
  ._1kp3quxg3 {
    flex-direction: row;
  }
  ._1kp3quxg7 {
    flex-direction: row-reverse;
  }
  ._1kp3quxgb {
    flex-direction: column;
  }
  ._1kp3quxgf {
    flex-direction: column-reverse;
  }
  ._1kp3quxgj {
    flex-wrap: wrap;
  }
  ._1kp3quxgn {
    flex-wrap: nowrap;
  }
  ._1kp3quxgr {
    flex-shrink: 0;
  }
  ._1kp3quxgv {
    flex-grow: 0;
  }
  ._1kp3quxgz {
    flex-grow: 1;
  }
  ._1kp3quxh3 {
    text-align: left;
  }
  ._1kp3quxh7 {
    text-align: center;
  }
  ._1kp3quxhb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1kp3qux4w {
    display: none;
  }
  ._1kp3qux50 {
    display: block;
  }
  ._1kp3qux54 {
    display: inline;
  }
  ._1kp3qux58 {
    display: inline-block;
  }
  ._1kp3qux5c {
    display: flex;
  }
  ._1kp3qux5g {
    position: relative;
  }
  ._1kp3qux5k {
    position: absolute;
  }
  ._1kp3qux5o {
    position: fixed;
  }
  ._1kp3qux5s {
    border-radius: 0;
  }
  ._1kp3qux5w {
    border-radius: 9999px;
  }
  ._1kp3qux60 {
    border-radius: var(--fz4hafb);
  }
  ._1kp3qux64 {
    border-radius: var(--fz4hafc);
  }
  ._1kp3qux68 {
    border-radius: var(--fz4hafd);
  }
  ._1kp3qux6c {
    border-radius: var(--fz4hafe);
  }
  ._1kp3qux6g {
    padding-top: var(--fz4haf0);
  }
  ._1kp3qux6k {
    padding-top: var(--fz4haf1);
  }
  ._1kp3qux6o {
    padding-top: var(--fz4haf2);
  }
  ._1kp3qux6s {
    padding-top: var(--fz4haf3);
  }
  ._1kp3qux6w {
    padding-top: var(--fz4haf4);
  }
  ._1kp3qux70 {
    padding-top: var(--fz4haf5);
  }
  ._1kp3qux74 {
    padding-top: var(--fz4haf6);
  }
  ._1kp3qux78 {
    padding-top: var(--fz4haf7);
  }
  ._1kp3qux7c {
    padding-top: var(--fz4haf8);
  }
  ._1kp3qux7g {
    padding-top: 0;
  }
  ._1kp3qux7k {
    padding-bottom: var(--fz4haf0);
  }
  ._1kp3qux7o {
    padding-bottom: var(--fz4haf1);
  }
  ._1kp3qux7s {
    padding-bottom: var(--fz4haf2);
  }
  ._1kp3qux7w {
    padding-bottom: var(--fz4haf3);
  }
  ._1kp3qux80 {
    padding-bottom: var(--fz4haf4);
  }
  ._1kp3qux84 {
    padding-bottom: var(--fz4haf5);
  }
  ._1kp3qux88 {
    padding-bottom: var(--fz4haf6);
  }
  ._1kp3qux8c {
    padding-bottom: var(--fz4haf7);
  }
  ._1kp3qux8g {
    padding-bottom: var(--fz4haf8);
  }
  ._1kp3qux8k {
    padding-bottom: 0;
  }
  ._1kp3qux8o {
    padding-right: var(--fz4haf0);
  }
  ._1kp3qux8s {
    padding-right: var(--fz4haf1);
  }
  ._1kp3qux8w {
    padding-right: var(--fz4haf2);
  }
  ._1kp3qux90 {
    padding-right: var(--fz4haf3);
  }
  ._1kp3qux94 {
    padding-right: var(--fz4haf4);
  }
  ._1kp3qux98 {
    padding-right: var(--fz4haf5);
  }
  ._1kp3qux9c {
    padding-right: var(--fz4haf6);
  }
  ._1kp3qux9g {
    padding-right: var(--fz4haf7);
  }
  ._1kp3qux9k {
    padding-right: var(--fz4haf8);
  }
  ._1kp3qux9o {
    padding-right: 0;
  }
  ._1kp3qux9s {
    padding-left: var(--fz4haf0);
  }
  ._1kp3qux9w {
    padding-left: var(--fz4haf1);
  }
  ._1kp3quxa0 {
    padding-left: var(--fz4haf2);
  }
  ._1kp3quxa4 {
    padding-left: var(--fz4haf3);
  }
  ._1kp3quxa8 {
    padding-left: var(--fz4haf4);
  }
  ._1kp3quxac {
    padding-left: var(--fz4haf5);
  }
  ._1kp3quxag {
    padding-left: var(--fz4haf6);
  }
  ._1kp3quxak {
    padding-left: var(--fz4haf7);
  }
  ._1kp3quxao {
    padding-left: var(--fz4haf8);
  }
  ._1kp3quxas {
    padding-left: 0;
  }
  ._1kp3quxaw {
    margin-top: var(--fz4haf0);
  }
  ._1kp3quxb0 {
    margin-top: var(--fz4haf1);
  }
  ._1kp3quxb4 {
    margin-top: var(--fz4haf2);
  }
  ._1kp3quxb8 {
    margin-top: var(--fz4haf3);
  }
  ._1kp3quxbc {
    margin-top: var(--fz4haf4);
  }
  ._1kp3quxbg {
    margin-top: var(--fz4haf5);
  }
  ._1kp3quxbk {
    margin-top: var(--fz4haf6);
  }
  ._1kp3quxbo {
    margin-top: var(--fz4haf7);
  }
  ._1kp3quxbs {
    margin-top: var(--fz4haf8);
  }
  ._1kp3quxbw {
    margin-top: 0;
  }
  ._1kp3quxc0 {
    margin-bottom: var(--fz4haf0);
  }
  ._1kp3quxc4 {
    margin-bottom: var(--fz4haf1);
  }
  ._1kp3quxc8 {
    margin-bottom: var(--fz4haf2);
  }
  ._1kp3quxcc {
    margin-bottom: var(--fz4haf3);
  }
  ._1kp3quxcg {
    margin-bottom: var(--fz4haf4);
  }
  ._1kp3quxck {
    margin-bottom: var(--fz4haf5);
  }
  ._1kp3quxco {
    margin-bottom: var(--fz4haf6);
  }
  ._1kp3quxcs {
    margin-bottom: var(--fz4haf7);
  }
  ._1kp3quxcw {
    margin-bottom: var(--fz4haf8);
  }
  ._1kp3quxd0 {
    margin-bottom: 0;
  }
  ._1kp3quxd4 {
    margin-right: var(--fz4haf0);
  }
  ._1kp3quxd8 {
    margin-right: var(--fz4haf1);
  }
  ._1kp3quxdc {
    margin-right: var(--fz4haf2);
  }
  ._1kp3quxdg {
    margin-right: var(--fz4haf3);
  }
  ._1kp3quxdk {
    margin-right: var(--fz4haf4);
  }
  ._1kp3quxdo {
    margin-right: var(--fz4haf5);
  }
  ._1kp3quxds {
    margin-right: var(--fz4haf6);
  }
  ._1kp3quxdw {
    margin-right: var(--fz4haf7);
  }
  ._1kp3quxe0 {
    margin-right: var(--fz4haf8);
  }
  ._1kp3quxe4 {
    margin-right: 0;
  }
  ._1kp3quxe8 {
    margin-left: var(--fz4haf0);
  }
  ._1kp3quxec {
    margin-left: var(--fz4haf1);
  }
  ._1kp3quxeg {
    margin-left: var(--fz4haf2);
  }
  ._1kp3quxek {
    margin-left: var(--fz4haf3);
  }
  ._1kp3quxeo {
    margin-left: var(--fz4haf4);
  }
  ._1kp3quxes {
    margin-left: var(--fz4haf5);
  }
  ._1kp3quxew {
    margin-left: var(--fz4haf6);
  }
  ._1kp3quxf0 {
    margin-left: var(--fz4haf7);
  }
  ._1kp3quxf4 {
    margin-left: var(--fz4haf8);
  }
  ._1kp3quxf8 {
    margin-left: 0;
  }
  ._1kp3quxfc {
    align-items: flex-start;
  }
  ._1kp3quxfg {
    align-items: center;
  }
  ._1kp3quxfk {
    align-items: flex-end;
  }
  ._1kp3quxfo {
    justify-content: flex-start;
  }
  ._1kp3quxfs {
    justify-content: center;
  }
  ._1kp3quxfw {
    justify-content: flex-end;
  }
  ._1kp3quxg0 {
    justify-content: space-between;
  }
  ._1kp3quxg4 {
    flex-direction: row;
  }
  ._1kp3quxg8 {
    flex-direction: row-reverse;
  }
  ._1kp3quxgc {
    flex-direction: column;
  }
  ._1kp3quxgg {
    flex-direction: column-reverse;
  }
  ._1kp3quxgk {
    flex-wrap: wrap;
  }
  ._1kp3quxgo {
    flex-wrap: nowrap;
  }
  ._1kp3quxgs {
    flex-shrink: 0;
  }
  ._1kp3quxgw {
    flex-grow: 0;
  }
  ._1kp3quxh0 {
    flex-grow: 1;
  }
  ._1kp3quxh4 {
    text-align: left;
  }
  ._1kp3quxh8 {
    text-align: center;
  }
  ._1kp3quxhc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1kp3qux4x {
    display: none;
  }
  ._1kp3qux51 {
    display: block;
  }
  ._1kp3qux55 {
    display: inline;
  }
  ._1kp3qux59 {
    display: inline-block;
  }
  ._1kp3qux5d {
    display: flex;
  }
  ._1kp3qux5h {
    position: relative;
  }
  ._1kp3qux5l {
    position: absolute;
  }
  ._1kp3qux5p {
    position: fixed;
  }
  ._1kp3qux5t {
    border-radius: 0;
  }
  ._1kp3qux5x {
    border-radius: 9999px;
  }
  ._1kp3qux61 {
    border-radius: var(--fz4hafb);
  }
  ._1kp3qux65 {
    border-radius: var(--fz4hafc);
  }
  ._1kp3qux69 {
    border-radius: var(--fz4hafd);
  }
  ._1kp3qux6d {
    border-radius: var(--fz4hafe);
  }
  ._1kp3qux6h {
    padding-top: var(--fz4haf0);
  }
  ._1kp3qux6l {
    padding-top: var(--fz4haf1);
  }
  ._1kp3qux6p {
    padding-top: var(--fz4haf2);
  }
  ._1kp3qux6t {
    padding-top: var(--fz4haf3);
  }
  ._1kp3qux6x {
    padding-top: var(--fz4haf4);
  }
  ._1kp3qux71 {
    padding-top: var(--fz4haf5);
  }
  ._1kp3qux75 {
    padding-top: var(--fz4haf6);
  }
  ._1kp3qux79 {
    padding-top: var(--fz4haf7);
  }
  ._1kp3qux7d {
    padding-top: var(--fz4haf8);
  }
  ._1kp3qux7h {
    padding-top: 0;
  }
  ._1kp3qux7l {
    padding-bottom: var(--fz4haf0);
  }
  ._1kp3qux7p {
    padding-bottom: var(--fz4haf1);
  }
  ._1kp3qux7t {
    padding-bottom: var(--fz4haf2);
  }
  ._1kp3qux7x {
    padding-bottom: var(--fz4haf3);
  }
  ._1kp3qux81 {
    padding-bottom: var(--fz4haf4);
  }
  ._1kp3qux85 {
    padding-bottom: var(--fz4haf5);
  }
  ._1kp3qux89 {
    padding-bottom: var(--fz4haf6);
  }
  ._1kp3qux8d {
    padding-bottom: var(--fz4haf7);
  }
  ._1kp3qux8h {
    padding-bottom: var(--fz4haf8);
  }
  ._1kp3qux8l {
    padding-bottom: 0;
  }
  ._1kp3qux8p {
    padding-right: var(--fz4haf0);
  }
  ._1kp3qux8t {
    padding-right: var(--fz4haf1);
  }
  ._1kp3qux8x {
    padding-right: var(--fz4haf2);
  }
  ._1kp3qux91 {
    padding-right: var(--fz4haf3);
  }
  ._1kp3qux95 {
    padding-right: var(--fz4haf4);
  }
  ._1kp3qux99 {
    padding-right: var(--fz4haf5);
  }
  ._1kp3qux9d {
    padding-right: var(--fz4haf6);
  }
  ._1kp3qux9h {
    padding-right: var(--fz4haf7);
  }
  ._1kp3qux9l {
    padding-right: var(--fz4haf8);
  }
  ._1kp3qux9p {
    padding-right: 0;
  }
  ._1kp3qux9t {
    padding-left: var(--fz4haf0);
  }
  ._1kp3qux9x {
    padding-left: var(--fz4haf1);
  }
  ._1kp3quxa1 {
    padding-left: var(--fz4haf2);
  }
  ._1kp3quxa5 {
    padding-left: var(--fz4haf3);
  }
  ._1kp3quxa9 {
    padding-left: var(--fz4haf4);
  }
  ._1kp3quxad {
    padding-left: var(--fz4haf5);
  }
  ._1kp3quxah {
    padding-left: var(--fz4haf6);
  }
  ._1kp3quxal {
    padding-left: var(--fz4haf7);
  }
  ._1kp3quxap {
    padding-left: var(--fz4haf8);
  }
  ._1kp3quxat {
    padding-left: 0;
  }
  ._1kp3quxax {
    margin-top: var(--fz4haf0);
  }
  ._1kp3quxb1 {
    margin-top: var(--fz4haf1);
  }
  ._1kp3quxb5 {
    margin-top: var(--fz4haf2);
  }
  ._1kp3quxb9 {
    margin-top: var(--fz4haf3);
  }
  ._1kp3quxbd {
    margin-top: var(--fz4haf4);
  }
  ._1kp3quxbh {
    margin-top: var(--fz4haf5);
  }
  ._1kp3quxbl {
    margin-top: var(--fz4haf6);
  }
  ._1kp3quxbp {
    margin-top: var(--fz4haf7);
  }
  ._1kp3quxbt {
    margin-top: var(--fz4haf8);
  }
  ._1kp3quxbx {
    margin-top: 0;
  }
  ._1kp3quxc1 {
    margin-bottom: var(--fz4haf0);
  }
  ._1kp3quxc5 {
    margin-bottom: var(--fz4haf1);
  }
  ._1kp3quxc9 {
    margin-bottom: var(--fz4haf2);
  }
  ._1kp3quxcd {
    margin-bottom: var(--fz4haf3);
  }
  ._1kp3quxch {
    margin-bottom: var(--fz4haf4);
  }
  ._1kp3quxcl {
    margin-bottom: var(--fz4haf5);
  }
  ._1kp3quxcp {
    margin-bottom: var(--fz4haf6);
  }
  ._1kp3quxct {
    margin-bottom: var(--fz4haf7);
  }
  ._1kp3quxcx {
    margin-bottom: var(--fz4haf8);
  }
  ._1kp3quxd1 {
    margin-bottom: 0;
  }
  ._1kp3quxd5 {
    margin-right: var(--fz4haf0);
  }
  ._1kp3quxd9 {
    margin-right: var(--fz4haf1);
  }
  ._1kp3quxdd {
    margin-right: var(--fz4haf2);
  }
  ._1kp3quxdh {
    margin-right: var(--fz4haf3);
  }
  ._1kp3quxdl {
    margin-right: var(--fz4haf4);
  }
  ._1kp3quxdp {
    margin-right: var(--fz4haf5);
  }
  ._1kp3quxdt {
    margin-right: var(--fz4haf6);
  }
  ._1kp3quxdx {
    margin-right: var(--fz4haf7);
  }
  ._1kp3quxe1 {
    margin-right: var(--fz4haf8);
  }
  ._1kp3quxe5 {
    margin-right: 0;
  }
  ._1kp3quxe9 {
    margin-left: var(--fz4haf0);
  }
  ._1kp3quxed {
    margin-left: var(--fz4haf1);
  }
  ._1kp3quxeh {
    margin-left: var(--fz4haf2);
  }
  ._1kp3quxel {
    margin-left: var(--fz4haf3);
  }
  ._1kp3quxep {
    margin-left: var(--fz4haf4);
  }
  ._1kp3quxet {
    margin-left: var(--fz4haf5);
  }
  ._1kp3quxex {
    margin-left: var(--fz4haf6);
  }
  ._1kp3quxf1 {
    margin-left: var(--fz4haf7);
  }
  ._1kp3quxf5 {
    margin-left: var(--fz4haf8);
  }
  ._1kp3quxf9 {
    margin-left: 0;
  }
  ._1kp3quxfd {
    align-items: flex-start;
  }
  ._1kp3quxfh {
    align-items: center;
  }
  ._1kp3quxfl {
    align-items: flex-end;
  }
  ._1kp3quxfp {
    justify-content: flex-start;
  }
  ._1kp3quxft {
    justify-content: center;
  }
  ._1kp3quxfx {
    justify-content: flex-end;
  }
  ._1kp3quxg1 {
    justify-content: space-between;
  }
  ._1kp3quxg5 {
    flex-direction: row;
  }
  ._1kp3quxg9 {
    flex-direction: row-reverse;
  }
  ._1kp3quxgd {
    flex-direction: column;
  }
  ._1kp3quxgh {
    flex-direction: column-reverse;
  }
  ._1kp3quxgl {
    flex-wrap: wrap;
  }
  ._1kp3quxgp {
    flex-wrap: nowrap;
  }
  ._1kp3quxgt {
    flex-shrink: 0;
  }
  ._1kp3quxgx {
    flex-grow: 0;
  }
  ._1kp3quxh1 {
    flex-grow: 1;
  }
  ._1kp3quxh5 {
    text-align: left;
  }
  ._1kp3quxh9 {
    text-align: center;
  }
  ._1kp3quxhd {
    text-align: right;
  }
}
.uo8yjc4 {
  font-size: var(--uo8yjc0);
  line-height: var(--uo8yjc1);
}
.uo8yjc4:before {
  content: "";
  display: table;
  margin-bottom: var(--uo8yjc2);
}
.uo8yjc4:after {
  content: "";
  display: table;
  margin-top: var(--uo8yjc3);
}
._1kr534d0 {
  font-family: var(--fz4haf2w);
}
._1kr534d1 {
  font-weight: var(--fz4haf46);
}
._1kr534d2 {
  font-weight: var(--fz4haf47);
}
._1kr534d3 {
  font-weight: var(--fz4haf48);
}
._1kr534d4 {
  --uo8yjc0: var(--fz4haf32);
  --uo8yjc1: var(--fz4haf33);
  --uo8yjc2: var(--fz4haf35);
  --uo8yjc3: var(--fz4haf36);
}
._1kr534d7 {
  --uo8yjc0: var(--fz4haf3c);
  --uo8yjc1: var(--fz4haf3d);
  --uo8yjc2: var(--fz4haf3f);
  --uo8yjc3: var(--fz4haf3g);
}
._1kr534da {
  --uo8yjc0: var(--fz4haf3m);
  --uo8yjc1: var(--fz4haf3n);
  --uo8yjc2: var(--fz4haf3p);
  --uo8yjc3: var(--fz4haf3q);
}
._1kr534dd {
  --uo8yjc0: var(--fz4haf3w);
  --uo8yjc1: var(--fz4haf3x);
  --uo8yjc2: var(--fz4haf3z);
  --uo8yjc3: var(--fz4haf40);
}
._1kr534dg {
  font-size: var(--fz4haf32);
  line-height: var(--fz4haf33);
}
._1kr534dh {
  font-size: var(--fz4haf3c);
  line-height: var(--fz4haf3d);
}
._1kr534di {
  font-size: var(--fz4haf3m);
  line-height: var(--fz4haf3n);
}
._1kr534dj {
  font-size: var(--fz4haf3w);
  line-height: var(--fz4haf3x);
}
._1kr534dk {
  font-weight: var(--fz4haf5d);
}
._1kr534dl {
  font-weight: var(--fz4haf5e);
}
._1kr534dm {
  --uo8yjc0: var(--fz4haf49);
  --uo8yjc1: var(--fz4haf4a);
  --uo8yjc2: var(--fz4haf4c);
  --uo8yjc3: var(--fz4haf4d);
}
._1kr534dp {
  --uo8yjc0: var(--fz4haf4j);
  --uo8yjc1: var(--fz4haf4k);
  --uo8yjc2: var(--fz4haf4m);
  --uo8yjc3: var(--fz4haf4n);
}
._1kr534ds {
  --uo8yjc0: var(--fz4haf4t);
  --uo8yjc1: var(--fz4haf4u);
  --uo8yjc2: var(--fz4haf4w);
  --uo8yjc3: var(--fz4haf4x);
}
._1kr534dv {
  --uo8yjc0: var(--fz4haf53);
  --uo8yjc1: var(--fz4haf54);
  --uo8yjc2: var(--fz4haf56);
  --uo8yjc3: var(--fz4haf57);
}
html:not(._1kp3quxz) ._1kr534d18 {
  --_1kr534dy: var(--fz4haf19);
  --_1kr534dz: var(--fz4haf17);
  --_1kr534d10: var(--fz4haf1d);
  --_1kr534d11: var(--fz4haf1o);
  --_1kr534d12: var(--fz4haf1m);
  --_1kr534d13: var(--fz4haf15);
  --_1kr534d14: var(--fz4haf1b);
  --_1kr534d15: var(--fz4haf1k);
  --_1kr534d16: var(--fz4haf1r);
  --_1kr534d17: var(--fz4haf1f);
}
html:not(._1kp3quxz) ._1kr534d19 {
  --_1kr534dy: var(--fz4haf1a);
  --_1kr534dz: var(--fz4haf18);
  --_1kr534d10: var(--fz4haf1e);
  --_1kr534d11: var(--fz4haf1p);
  --_1kr534d12: var(--fz4haf1n);
  --_1kr534d13: var(--fz4haf16);
  --_1kr534d14: var(--fz4haf1c);
  --_1kr534d15: var(--fz4haf1l);
  --_1kr534d16: var(--fz4haf1s);
  --_1kr534d17: var(--fz4haf1h);
}
html._1kp3quxz ._1kr534d1a {
  --_1kr534dy: var(--fz4haf19);
  --_1kr534dz: var(--fz4haf17);
  --_1kr534d10: var(--fz4haf1d);
  --_1kr534d11: var(--fz4haf1o);
  --_1kr534d12: var(--fz4haf1m);
  --_1kr534d13: var(--fz4haf15);
  --_1kr534d14: var(--fz4haf1b);
  --_1kr534d15: var(--fz4haf1k);
  --_1kr534d16: var(--fz4haf1r);
  --_1kr534d17: var(--fz4haf1f);
}
html._1kp3quxz ._1kr534d1b {
  --_1kr534dy: var(--fz4haf1a);
  --_1kr534dz: var(--fz4haf18);
  --_1kr534d10: var(--fz4haf1e);
  --_1kr534d11: var(--fz4haf1p);
  --_1kr534d12: var(--fz4haf1n);
  --_1kr534d13: var(--fz4haf16);
  --_1kr534d14: var(--fz4haf1c);
  --_1kr534d15: var(--fz4haf1l);
  --_1kr534d16: var(--fz4haf1s);
  --_1kr534d17: var(--fz4haf1h);
}
html:not(._1kp3quxz) ._1kr534d1c,
html:not(._1kp3quxz) ._1kr534d1d,
html:not(._1kp3quxz) ._1kr534d1e,
html:not(._1kp3quxz) ._1kr534d1f {
  --_1kr534d15: var(--_1kr534dy);
}
html:not(._1kp3quxz) ._1kr534d1g,
html:not(._1kp3quxz) ._1kr534d1h {
  --_1kr534d15: var(--_1kr534dz);
}
html:not(._1kp3quxz) ._1kr534d1i {
  --_1kr534d15: var(--_1kr534d12);
}
html:not(._1kp3quxz) ._1kr534d1j {
  --_1kr534d15: var(--_1kr534d10);
}
html:not(._1kp3quxz) ._1kr534d1k {
  --_1kr534d15: var(--_1kr534d11);
}
html._1kp3quxz ._1kr534d1l,
html._1kp3quxz ._1kr534d1m,
html._1kp3quxz ._1kr534d1n,
html._1kp3quxz ._1kr534d1o {
  --_1kr534d15: var(--_1kr534dy);
}
html._1kp3quxz ._1kr534d1p,
html._1kp3quxz ._1kr534d1q {
  --_1kr534d15: var(--_1kr534dz);
}
html._1kp3quxz ._1kr534d1r {
  --_1kr534d15: var(--_1kr534d12);
}
html._1kp3quxz ._1kr534d1s {
  --_1kr534d15: var(--_1kr534d10);
}
html._1kp3quxz ._1kr534d1t {
  --_1kr534d15: var(--_1kr534d11);
}
._1kr534d1u {
  color: var(--_1kr534dy);
}
._1kr534d1v {
  color: var(--_1kr534dz);
}
._1kr534d1w {
  color: var(--_1kr534d10);
}
._1kr534d1x {
  color: var(--_1kr534d11);
}
._1kr534d1y {
  color: var(--_1kr534d12);
}
._1kr534d1z {
  color: var(--_1kr534d13);
}
._1kr534d20 {
  color: var(--_1kr534d14);
}
._1kr534d21 {
  color: var(--_1kr534d15);
}
._1kr534d22 {
  color: var(--_1kr534d16);
}
._1kr534d23 {
  color: var(--_1kr534d17);
}
._1kr534d24 {
  padding-bottom: calc((var(--fz4haf9) - var(--fz4haf33)) / 2);
  padding-top: calc((var(--fz4haf9) - var(--fz4haf33)) / 2);
}
._1kr534d25 {
  padding-bottom: calc((var(--fz4haf9) - var(--fz4haf3d)) / 2);
  padding-top: calc((var(--fz4haf9) - var(--fz4haf3d)) / 2);
}
._1kr534d26 {
  padding-bottom: calc((var(--fz4haf9) - var(--fz4haf3n)) / 2);
  padding-top: calc((var(--fz4haf9) - var(--fz4haf3n)) / 2);
}
._1kr534d27 {
  padding-bottom: calc((var(--fz4haf9) - var(--fz4haf3x)) / 2);
  padding-top: calc((var(--fz4haf9) - var(--fz4haf3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1kr534d4 {
    --uo8yjc0: var(--fz4haf37);
    --uo8yjc1: var(--fz4haf38);
    --uo8yjc2: var(--fz4haf3a);
    --uo8yjc3: var(--fz4haf3b);
  }
  ._1kr534d7 {
    --uo8yjc0: var(--fz4haf3h);
    --uo8yjc1: var(--fz4haf3i);
    --uo8yjc2: var(--fz4haf3k);
    --uo8yjc3: var(--fz4haf3l);
  }
  ._1kr534da {
    --uo8yjc0: var(--fz4haf3r);
    --uo8yjc1: var(--fz4haf3s);
    --uo8yjc2: var(--fz4haf3u);
    --uo8yjc3: var(--fz4haf3v);
  }
  ._1kr534dd {
    --uo8yjc0: var(--fz4haf41);
    --uo8yjc1: var(--fz4haf42);
    --uo8yjc2: var(--fz4haf44);
    --uo8yjc3: var(--fz4haf45);
  }
  ._1kr534dg {
    font-size: var(--fz4haf37);
    line-height: var(--fz4haf38);
  }
  ._1kr534dh {
    font-size: var(--fz4haf3h);
    line-height: var(--fz4haf3i);
  }
  ._1kr534di {
    font-size: var(--fz4haf3r);
    line-height: var(--fz4haf3s);
  }
  ._1kr534dj {
    font-size: var(--fz4haf41);
    line-height: var(--fz4haf42);
  }
  ._1kr534dm {
    --uo8yjc0: var(--fz4haf4e);
    --uo8yjc1: var(--fz4haf4f);
    --uo8yjc2: var(--fz4haf4h);
    --uo8yjc3: var(--fz4haf4i);
  }
  ._1kr534dp {
    --uo8yjc0: var(--fz4haf4o);
    --uo8yjc1: var(--fz4haf4p);
    --uo8yjc2: var(--fz4haf4r);
    --uo8yjc3: var(--fz4haf4s);
  }
  ._1kr534ds {
    --uo8yjc0: var(--fz4haf4y);
    --uo8yjc1: var(--fz4haf4z);
    --uo8yjc2: var(--fz4haf51);
    --uo8yjc3: var(--fz4haf52);
  }
  ._1kr534dv {
    --uo8yjc0: var(--fz4haf58);
    --uo8yjc1: var(--fz4haf59);
    --uo8yjc2: var(--fz4haf5b);
    --uo8yjc3: var(--fz4haf5c);
  }
  ._1kr534d24 {
    padding-bottom: calc((var(--fz4haf9) - var(--fz4haf38)) / 2);
    padding-top: calc((var(--fz4haf9) - var(--fz4haf38)) / 2);
  }
  ._1kr534d25 {
    padding-bottom: calc((var(--fz4haf9) - var(--fz4haf3i)) / 2);
    padding-top: calc((var(--fz4haf9) - var(--fz4haf3i)) / 2);
  }
  ._1kr534d26 {
    padding-bottom: calc((var(--fz4haf9) - var(--fz4haf3s)) / 2);
    padding-top: calc((var(--fz4haf9) - var(--fz4haf3s)) / 2);
  }
  ._1kr534d27 {
    padding-bottom: calc((var(--fz4haf9) - var(--fz4haf42)) / 2);
    padding-top: calc((var(--fz4haf9) - var(--fz4haf42)) / 2);
  }
}
._10edonf0 {
  --fz4haf0: 24px;
  --fz4haf1: 4px;
  --fz4haf2: 8px;
  --fz4haf3: 12px;
  --fz4haf4: 20px;
  --fz4haf5: 32px;
  --fz4haf6: 48px;
  --fz4haf7: 96px;
  --fz4haf8: 120px;
  --fz4haf9: 44px;
  --fz4hafa: 4px;
  --fz4hafb: 2px;
  --fz4hafc: 4px;
  --fz4hafd: 6px;
  --fz4hafe: 10px;
  --fz4haff: #e60278;
  --fz4hafg: #f8b1dc;
  --fz4hafh: #fdc221;
  --fz4hafi: #fee384;
  --fz4hafj: #b91e1e;
  --fz4hafk: #fb999a;
  --fz4hafl: #838fa5;
  --fz4hafm: rgba(159, 176, 245, 0.7);
  --fz4hafn: #4964e9;
  --fz4hafo: #9fb0f5;
  --fz4hafp: #1d559d;
  --fz4hafq: #98c9f1;
  --fz4hafr: #2e3849;
  --fz4haft: #d2d7df;
  --fz4hafs: #fff;
  --fz4hafu: #12784f;
  --fz4hafv: #8bdec5;
  --fz4hafw: #512eaa;
  --fz4hafx: #c6acf5;
  --fz4hafy: 1px;
  --fz4hafz: 2px;
  --fz4haf10: 3px;
  --fz4haf11: 400px;
  --fz4haf12: 660px;
  --fz4haf13: 940px;
  --fz4haf14: 1280px;
  --fz4haf15: #e60278;
  --fz4haf16: #f8b1dc;
  --fz4haf17: #723d02;
  --fz4haf18: #fee384;
  --fz4haf19: #b91e1e;
  --fz4haf1a: #fb999a;
  --fz4haf1b: #4964e9;
  --fz4haf1c: #9fb0f5;
  --fz4haf1d: #1d559d;
  --fz4haf1e: #98c9f1;
  --fz4haf1f: #4964e9;
  --fz4haf1h: #9fb0f5;
  --fz4haf1g: #4964e9;
  --fz4haf1i: #512eaa;
  --fz4haf1j: #c6acf5;
  --fz4haf1k: #2e3849;
  --fz4haf1l: #fff;
  --fz4haf1m: #12784f;
  --fz4haf1n: #8bdec5;
  --fz4haf1o: #512eaa;
  --fz4haf1p: #c6acf5;
  --fz4haf1q: #f57c00;
  --fz4haf1r: #5a6881;
  --fz4haf1s: hsla(0, 0%, 100%, 0.65);
  --fz4haf1t: #f7f8fb;
  --fz4haf1u: #0e131b;
  --fz4haf1v: #0d3880;
  --fz4haf1w: #e60278;
  --fz4haf1x: #cd026b;
  --fz4haf1y: #fd0585;
  --fz4haf1z: #feeffa;
  --fz4haf20: #fdd7f3;
  --fz4haf21: #fde3f6;
  --fz4haf22: #fdc221;
  --fz4haf23: #fef8de;
  --fz4haf24: #b91e1e;
  --fz4haf25: #a31a1a;
  --fz4haf26: #db1616;
  --fz4haf27: #ffe3e2;
  --fz4haf28: #fef3f3;
  --fz4haf29: #fcdbdb;
  --fz4haf2a: #fde7e7;
  --fz4haf2b: #4964e9;
  --fz4haf2c: #3251e6;
  --fz4haf2d: #5975ff;
  --fz4haf2e: #f4f6fe;
  --fz4haf2f: #dde3fc;
  --fz4haf2g: #e8ecfd;
  --fz4haf2h: #1d559d;
  --fz4haf2i: #e3f2fb;
  --fz4haf2j: #2e3849;
  --fz4haf2k: #242c39;
  --fz4haf2l: #384459;
  --fz4haf2m: #eaecf1;
  --fz4haf2n: #f7f8fb;
  --fz4haf2o: #e6e9f3;
  --fz4haf2p: #eff1f7;
  --fz4haf2q: #12784f;
  --fz4haf2r: #e2f7f1;
  --fz4haf2s: #512eaa;
  --fz4haf2t: #f1e8fd;
  --fz4haf2u: #fff;
  --fz4haf2v: #1c2330;
  --fz4haf2w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --fz4haf2x: 1456;
  --fz4haf2y: 1900;
  --fz4haf2z: -500;
  --fz4haf30: 0;
  --fz4haf31: 2048;
  --fz4haf32: 12px;
  --fz4haf33: 20px;
  --fz4haf34: 8.5313px;
  --fz4haf35: -0.4642em;
  --fz4haf36: -0.4915em;
  --fz4haf37: 12px;
  --fz4haf38: 20px;
  --fz4haf39: 8.5313px;
  --fz4haf3a: -0.4642em;
  --fz4haf3b: -0.4915em;
  --fz4haf3c: 14px;
  --fz4haf3d: 20px;
  --fz4haf3e: 9.9531px;
  --fz4haf3f: -0.3451em;
  --fz4haf3g: -0.3725em;
  --fz4haf3h: 14px;
  --fz4haf3i: 20px;
  --fz4haf3j: 9.9531px;
  --fz4haf3k: -0.3451em;
  --fz4haf3l: -0.3725em;
  --fz4haf3m: 16px;
  --fz4haf3n: 24px;
  --fz4haf3o: 11.375px;
  --fz4haf3p: -0.3809em;
  --fz4haf3q: -0.4082em;
  --fz4haf3r: 16px;
  --fz4haf3s: 24px;
  --fz4haf3t: 11.375px;
  --fz4haf3u: -0.3809em;
  --fz4haf3v: -0.4082em;
  --fz4haf3w: 18px;
  --fz4haf3x: 28px;
  --fz4haf3y: 12.7969px;
  --fz4haf3z: -0.4086em;
  --fz4haf40: -0.436em;
  --fz4haf41: 18px;
  --fz4haf42: 28px;
  --fz4haf43: 12.7969px;
  --fz4haf44: -0.4086em;
  --fz4haf45: -0.436em;
  --fz4haf46: 400;
  --fz4haf47: 600;
  --fz4haf48: 700;
  --fz4haf49: 28px;
  --fz4haf4a: 36px;
  --fz4haf4b: 19.9063px;
  --fz4haf4c: -0.2737em;
  --fz4haf4d: -0.3011em;
  --fz4haf4e: 42px;
  --fz4haf4f: 44px;
  --fz4haf4g: 29.8594px;
  --fz4haf4h: -0.1547em;
  --fz4haf4i: -0.182em;
  --fz4haf4j: 21px;
  --fz4haf4k: 32px;
  --fz4haf4l: 14.9297px;
  --fz4haf4m: -0.3928em;
  --fz4haf4n: -0.4201em;
  --fz4haf4o: 28px;
  --fz4haf4p: 36px;
  --fz4haf4q: 19.9063px;
  --fz4haf4r: -0.2737em;
  --fz4haf4s: -0.3011em;
  --fz4haf4t: 21px;
  --fz4haf4u: 28px;
  --fz4haf4v: 14.9297px;
  --fz4haf4w: -0.2975em;
  --fz4haf4x: -0.3249em;
  --fz4haf4y: 21px;
  --fz4haf4z: 28px;
  --fz4haf50: 14.9297px;
  --fz4haf51: -0.2975em;
  --fz4haf52: -0.3249em;
  --fz4haf53: 18px;
  --fz4haf54: 28px;
  --fz4haf55: 12.7969px;
  --fz4haf56: -0.4086em;
  --fz4haf57: -0.436em;
  --fz4haf58: 18px;
  --fz4haf59: 28px;
  --fz4haf5a: 12.7969px;
  --fz4haf5b: -0.4086em;
  --fz4haf5c: -0.436em;
  --fz4haf5d: 400;
  --fz4haf5e: 600;
  --fz4haf5f: none;
  --fz4haf5g: 24px;
  --fz4haf5h: 20px;
  --fz4haf5i: transform 0.125s ease, opacity 0.125s ease;
  --fz4haf5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --fz4haf5k: scale(0.95);
  --fz4haf5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --fz4haf5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --fz4haf5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.z69d5r6 {
  background: var(--z69d5r0);
}
.z69d5r7 {
  background: var(--z69d5r1);
}
.z69d5r8 {
  background: var(--z69d5r2);
}
.z69d5r9 {
  background: var(--z69d5r3);
}
.z69d5ra {
  background: var(--z69d5r4);
}
.z69d5rb {
  background: var(--z69d5r5);
}
html:not(._1kp3quxz) .z69d5rc {
  --z69d5r0: var(--fz4hafw);
  --z69d5r1: var(--fz4hafp);
  --z69d5r2: var(--fz4hafu);
  --z69d5r3: var(--fz4hafh);
  --z69d5r4: var(--fz4hafj);
  --z69d5r5: var(--fz4hafn);
}
html:not(._1kp3quxz) .z69d5rd {
  --z69d5r0: var(--fz4hafx);
  --z69d5r1: var(--fz4hafq);
  --z69d5r2: var(--fz4hafv);
  --z69d5r3: var(--fz4hafi);
  --z69d5r4: var(--fz4hafk);
  --z69d5r5: var(--fz4hafo);
}
html._1kp3quxz .z69d5re {
  --z69d5r0: var(--fz4hafw);
  --z69d5r1: var(--fz4hafp);
  --z69d5r2: var(--fz4hafu);
  --z69d5r3: var(--fz4hafh);
  --z69d5r4: var(--fz4hafj);
  --z69d5r5: var(--fz4hafn);
}
html._1kp3quxz .z69d5rf {
  --z69d5r0: var(--fz4hafx);
  --z69d5r1: var(--fz4hafq);
  --z69d5r2: var(--fz4hafv);
  --z69d5r3: var(--fz4hafi);
  --z69d5r4: var(--fz4hafk);
  --z69d5r5: var(--fz4hafo);
}
.z69d5rg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.z69d5rh {
  width: var(--fz4hafe);
}
.z69d5ri {
  width: var(--fz4hafa);
}
._1eyx3ym0 {
  margin-bottom: -0.1em;
}
._1eyx3ym2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1eyx3ym0 ._1eyx3ym2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1eyx3ym4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_1eyx3ym3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__1kp3quxz,html.sprinkles_darkMode__1kp3quxz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__10edonf0 typography_lightModeTone_light__1kr534d18 typography_darkModeTone_dark__1kr534d1b">
+        <div class="reset_base__n3ejd10 sprinkles_paddingBottom_gutter_mobile__1kp3qux7i sprinkles_paddingTop_gutter_mobile__1kp3qux6e sprinkles_paddingLeft_gutter_mobile__1kp3qux9q sprinkles_paddingRight_gutter_mobile__1kp3qux8m sprinkles_position_relative_mobile__1kp3qux5e typography_lightModeTone_light__1kr534d18 typography_darkModeTone_dark__1kr534d1b sprinkles_background_surface_lightMode__1kp3qux32 sprinkles_background_surfaceDark_darkMode__1kp3qux35">
+          <span class="reset_base__n3ejd10 sprinkles_display_block_mobile__1kp3qux4y typography_fontFamily__1kr534d0 typography_fontWeight_regular__1kr534d1 typography_tone_neutral__1kr534d21 capsize_capsizeStyle__uo8yjc4 typography_textSize_large__1kr534dd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
